# my-openenv

./: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  email_triage_environment.py  requirements.txt
server/static/: index.html
